# pmdaq

./: CMake.defs  CMakeLists.txt  README.md  SConscript  SConscript.mac  SConstruct
cms_febv2/: calib_tdc_pedestal  install.sh
cms_febv2/daq/: FebWriter.cxx  FebWriter.hh  FebWriter.py  __init__.py  compile_febwriter  feb_daq.py  feb_daq.service  febv2_fsm.py  febv2_setup.py  set_env.sh  start_a_run
cms_febv2/db/: __init__.py  csv_register_access.py  example.py  make_corr.py
cms_febv2/etc/: cms_febv2.bashrc  current_fc7_config.json  default_fpga.csv  default_fpga3.13.csv  default_fpga4.0.csv  default_fpga4.6.csv  default_fpga4.8.csv  default_petiroc.csv  default_petiroc_v3_c8.csv  v47.csv
cms_febv2/light_daq/: FebWriter.i  FebWriter.py  __init__.py  compile_febwriter  lfeb_daq.py  lfeb_daq.service  lfebv2_fsm.py  lfebv2_setup.py  start_a_run
dartproject/: pubspec.yaml
dartproject/lib/: mgaccess.dart  mgasic.dart  mgconfig.dart  mghr2.dart  mgrun.dart
docker/: docker-compose.yml  docker-install.sh  memento_caenhv  memento_mongo  memento_wiener
etc/: pmdaq.bashrc  pmdaq.conf  pmdaq.service  pns.conf  pns.service
etc/lyon/: setup_parameters.json
evb/: CMakeLists.txt
evb/apps/builder/: CMakeLists.txt  localCollector.cc  localCollector.hh
evb/apps/dsex/: CMakeLists.txt  localProducer.cc  localProducer.hh
evb/apps/processors/: CMakeLists.txt  binarywriter.cc  binarywriter.hh  dummywriter.cc  dummywriter.hh  shmwriter.cc  shmwriter.hh
evb/include/: pmBuffer.hh  pmLogger.hh  pmMerger.hh  pmPuller.hh  pmSender.hh
evb/src/: pmMerger.cc  pmPuller.cc  pmSender.cc
extras/: CAENHVWrapper-6.6-build20240424.tgz  install_netlink
extras/hv_control/: hvcontrol.py  hvcontrol.service  (+2 more)
include/: baseServer.hh  dlfcn.h  fsmw.hh  handlerPlugin.hh  monitor.hh  pluginInfo.hh  pmLogger.hh  stdafx.hh  utils.hh
lyon/db/: CMakeLists.txt  Febv1ConfigAccess.cc  Febv1ConfigAccess.hh  HR2ConfigAccess.cc  HR2ConfigAccess.hh  HR2Slow.hh  LIROCConfigAccess.cc  LIROCConfigAccess.hh  LRSlow.hh  MGROCSlow.hh  MROCSlow.hh  PRBSlow.hh  PRCSlow.hh  PRSlow.hh
lyon/dbtool/: CMakeLists.txt  configaccess.cc  configaccess.hh  hr2.hh
lyon/dif/: CMakeLists.txt  DIFReadoutConstant.hh  DifManager.cc  DifManager.hh  driver.cc  driver.hh  interface.cc  interface.hh  reader.cc  reader.hh
lyon/febinj/: CMakeLists.txt  FebinjManager.cc  FebinjManager.hh  febinj.hh
lyon/febv2/: CMakeLists.txt  Febv2Manager.cc  Febv2Manager.hh
lyon/gricv0/: CMakeLists.txt  Gricv0Interface.hh  Gricv0Manager.cc  Gricv0Manager.cc.back  Gricv0Manager.hh  board.cc  datahandler.cc  interface.cc  messagehandler.cc  registerhandler.cc  sensorhandler.cc  sockethandler.cc
lyon/gricv1/: CMakeLists.txt  Gricv1Interface.hh  Gricv1Manager.cc  Gricv1Manager.hh  board.cc  datahandler.cc  interface.cc  messagehandler.cc  registerhandler.cc  slchandler.cc  sockethandler.cc
lyon/ipdc/: CMakeLists.txt  FtdiUsbDriver.cc  FtdiUsbDriver.hh  IpdcHandler.cc  IpdcHandler.hh  IpdcManager.cc  IpdcManager.hh
lyon/liboard/: CMakeLists.txt  LiboardDriver.cc  LiboardDriver.hh  LiboardInterface.cc  LiboardInterface.hh  LiboardManager.cc  LiboardManager.hh
lyon/pmr/: CMakeLists.txt  PmrDriver.cc  PmrDriver.hh  PmrInterface.cc  PmrInterface.hh  PmrManager.cc  PmrManager.hh
lyon/sdcc/: CMakeLists.txt  SdccManager.cc  SdccManager.hh  driver.cc  driver.hh  interface.cc  interface.hh  reader.cc  reader.hh
lyon/udp_data_source/: CMakeLists.txt  udp_data_source.cc  udp_data_source.hh
lyon/wizcc/: CMakeLists.txt  WizccInterface.hh  bufferHandler.cc  controller.cc  controller.hh  socketProcessor.cc
lyon/wmdcc/: CMakeLists.txt  WMDCCInterface.hh  WMDCCManager.cc  WMDCCManager.hh  registerhandler.cc
lyon/wtricv0/: CMakeLists.txt  Wtricv0Interface.hh  Wtricv0Manager.cc  Wtricv0Manager.hh  datahandler.cc  registerhandler.cc  sensorhandler.cc
lyon/wtricv1/: CMakeLists.txt  Wtricv1Interface.hh  Wtricv1Manager.cc  Wtricv1Manager.hh  datahandler.cc  registerhandler.cc  slchandler.cc
mqtt/: compile
picmic/reader/: CMakeLists.txt
picmic/reader/etc/: FEBV2_R3_1.json  RE31_1.json  RE41_1.json  feb_example.json
picmic/reader/plugins/: ExampleProcessor.cc  FebProcessor.cc  FebProcessor.hh  picProcessor.cc
picmic/reader/scripts/: anh.py
picmic/reader/src/: DCHistogramHandler.cc  DCHistogramHandler.hh  DCUtils.hh  TdcUplinkFrame.cc  TdcUplinkFrame.hh  febv2Macro.hh  irpcGeometry.cc  irpcGeometry.hh  main.cc  rbEvent.hh  rbProcessor.hh  rbReader.cc  rbReader.hh  rbRun.hh
plugins/: .sconsign.dblite
plugins/bmp/: CMakeLists.txt  bmpPlugin.cxx  bmpPlugin.hh
plugins/demo/: .sconsign.dblite  CMakeLists.txt  SConscript  demo.cxx  demo.hh
plugins/genesys/: CMakeLists.txt  Genesys.cxx  Genesys.hh  genesysPlugin.cxx  genesysPlugin.hh
plugins/grStore/: CMakeLists.txt  SConscript  grStore.cxx  grStore.hh  graphite-client.c  graphite-client.h
plugins/hih/: CMakeLists.txt  hih8000.hh  hihPlugin.cxx  hihPlugin.hh
plugins/mgStore/: CMakeLists.txt  SConscript  mgStore.cxx  mgStore.hh
plugins/mqttStore/: CMakeLists.txt  mqttStore.cxx  mqttStore.hh
plugins/syx27/: CMakeLists.txt  HVCaenInterface.cxx  HVCaenInterface.hh  syx27Plugin.cxx  syx27Plugin.hh
plugins/wiener/: CMakeLists.txt  SConscript  WienerSnmp.cxx  WienerSnmp.hh  wienerPlugin.cxx  wienerPlugin.hh
pns/: CMakeLists.txt  SConscript  pns.cc  pns.cxx  pns.hh
pyrc/: dqc  fa_daq.py  mqtt_interface.py  rc_control.py  rc_fast.py  rc_interface.py  rc_pns.py  rc_request.py  rc_services.py  rc_sessions.py
scripts/: MongoAsic.py  MongoHR2.py  MongoJob.py  MongoLiroc.py  MongoMROC.py  MongoMqtt.py  MongoPR2.py  MongoRoc.py  MongoSlow.py  combdaq  combrc.py  combrc_threaded.py  daq_webaccess  daq_webaccess.service  daq_webaccess_service_daemon  daqrc.py  makeped  mbmdcc.py  mg_webaccess  mg_webaccess.service  mg_webaccess_service_daemon  mga  mgjob  mgmqtt  mgroc  mgslow  pmdaq.py  pmdaqrc.py  pnsAccess.py  prettyjson.py  rcslow.py  serviceAccess.py  session.py  slowctrl  xml2mongo.py
src/: baseServer.cc  baseServer.cxx  dlfcn.c  fsmw.cxx  monitor.cxx  scannet.cc  utils.cxx
(+289 files in other folders)
